--- a/style.css
+++ b/style.css
@@ -94,11 +94,11 @@ li {
   padding: 4px 0px 0px 0px;
 }
 
-.recipe-title {
+.recipe-title, .restaurant-title {
   padding: 4px 0px 2px 0px;
 }
 
-.cook-time {
+.cook-time, .address, .cuisine-and-cost {
   padding: 2px 0px 4px 0px;
 }
 
@@ -153,6 +153,7 @@ button {
     width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
 
   .landing-box {
