--- a/style.css
+++ b/style.css
@@ -8,19 +8,38 @@
   display: none;
 }
 
+button.hidden {
+  display: none;
+}
+
 html {
-  background-color: gray;
+  background-color: #8e3343;
   padding: 5px;
   height: auto;
   min-height: 100%;
   display: flex;
   justify-content: center;
-  line-height: 1.3;
+  line-height: 1.4;
+}
+
+a {
+  color: #FEF8E6;
+}
+
+.start-over {
+  background-color: #ff935c;
+  border: 1px solid #702f00;
+  color: #FEF8E6;
+  padding: 6px 10px;
+  font-size: .8em;
+  margin: 3px 0px 5px 0px;
+  border-radius: 5px;
+  display: inline-block;
+  text-align: center;
 }
 
 body {
-  background-color: lightgray;
-  padding: 5px;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   width: 90%;
   height: 100%;
@@ -28,47 +47,91 @@ body {
 
 header {
   text-align: center;
+  background-color: #FEF8E6;
+  color: #FEF8E6;
+  border-radius: 10px;
+  margin: 0px 4px 5px 4px;
+  padding: 4px;
 }
 
-.site-title {
-  background-color: #AFAFAF;
-  font-size: 2.2em;
+.titles {
+  max-width: 100%;
+  background-color: #ff935c;
+  border: #702f00 1px solid;
+  border-radius: 10px;
+  padding-top: 2px;
+}
+
+.website-title {
+  max-width: 100%;
+  padding: 3px;
+  border-radius: 10px;
+  background-color: #ff935c;
+}
+
+.box-title {
+  max-height: 40px;
+  max-width: 100%;
+  padding: 3px;
 }
 
 .site-desc {
-  background-color: #9b9b9b;
-  padding: 6px;
+  padding: 7px 2px 7px 2px;
   font-size: 1em;
   font-weight: 500;
+  color: #702f00;
+}
+
+fieldset {
+  padding-top: 3px;
 }
 
 main {
   margin: 5px 0px 2px 0px;
 }
 
+.submit-button {
+  background-color: #FEF8E6;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  padding: 6px 10px;
+  font-size: .8em;
+  margin: 3px 0px 5px 0px;
+  border: 1px solid #702f00;
+  border-radius: 5px;
+}
+
 section {
-  background-color: gray;
-  padding: 6px;
+  background-color: #FEF8E6;
+  color: #801c2e;
   text-align: center;
   margin: 3px 0px 3px 0px;
 }
 
-.restaurant-name {
-  background-color: #AFAFAF;
+.landing-box {
+  padding: 5px;
+  border-radius: 10px;
+  margin: 8px 4px 8px 4px;
 }
 
 .recipe-pic, .restaurant-pic {
   max-width: 50%;
   object-fit: scale-down;
+  padding: 3px;
 }
 
-h3, h4 {
-  background-color: #AFAFAF;
+#random-button {
+  padding-top: 3px;
+}
+
+.deco-image {
+  max-height: 60px;
 }
 
 .box-descriptions {
-  background-color: #9b9b9b;
-  padding: 5px;
+  background-color: #FEF8E6;
+  padding: 8px 4px 8px 4px;
 }
 
 fieldset {
@@ -76,12 +139,15 @@ fieldset {
 }
 
 form {
-  background-color: #AFAFAF;
-  padding: 5px;
+  background-color: #ff935c;
+  border-radius: 5px;
+  color: #FEF8E6;
+  border: 1px #702f00 solid;
 }
 
 input {
   padding: 2px;
+  margin: 2px 0px 2px 0px;
 }
 
 .max-return, .max-random {
@@ -93,10 +159,20 @@ ul {
   -moz-column-count: 2;
   column-count: 2;
   list-style: none;
+  padding: 0px 3px 0px 3px;
+}
+
+.results-header {
+  background-color: #ff935c;
+  color: #FEF8E6;
+  border-radius: 5px;
+  padding: 3px;
+  border: 1px solid #702f00;
+  margin: 4px;
 }
 
 li {
-  padding: 4px 0px 0px 0px;
+  padding: 4px;
   text-align: left;
 }
 
@@ -109,7 +185,8 @@ li {
 }
 
 .recipe-info, .restaurant-info {
-  margin-top: 6px;
+  margin: 6px 4px;
+  border-radius: 10px;
 }
 
 button {
@@ -133,6 +210,10 @@ button {
   .recipe-pic, .restaurant-pic {
     max-width: 35%;
   }
+
+  .deco-image {
+  max-height: 80px;
+}
 }
  
 @media screen and (min-width: 900px) {
@@ -155,6 +236,10 @@ button {
     flex: 1;
   }
 
+  .deco-image {
+  max-height: 100px;
+}
+
   .recipe-details, .restaurant-details {
     width: 100%;
     display: flex;
@@ -175,6 +260,7 @@ button {
 
   .recipe-pic, .restaurant-pic {
     max-width: 30%;
+    border-radius: 10px;
   }
 }
   
